# AtariGon

./: MonteCarlo.py  MonteCarlo2.py  QAgent_weights.pth  QAgent_weights2.pth  QAgent_weights_contra_bugolara.pth  QTrainer_weights.pth  deepq_learner.py  kerassagent.py  leñador.py  linearagnet.py  mtcsplayer.py  none.py  pyproject.toml  qlearner.py  selfqlearn.py
agents/: QAgent.py  Qentrenador.py  Qnetwork.py  bugolara.py  plepito.py  pruebaq.py  qlearner.py
agents_jubilados/: MonteCarlo2.py  QAgent.py  Qlearninggym.py  bugolara.py  bugolaralisto.py  plepito.py  qlearner.py
atarigon/: AtariGonEnv.py  api.py  main.py  train.py
