[tool.poetry]
name = "atarigon"
version = "0.1.0"
description = ""
authors = ["blazaid <alberto.diaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
scikit-learn = "^1.4.2"
keras = "^3.3.3"
torch = "^2.3.0"
gymnasium = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
